--- a/frontend/dashboard/src/app/landing-page/landing-page.component.html
+++ b/frontend/dashboard/src/app/landing-page/landing-page.component.html
@@ -17,7 +17,7 @@
           <form>
             <mat-form-field>
               <mat-label>Company</mat-label>
-              <mat-select [(ngModel)]="selectedValue" name="allcompanyid">
+              <mat-select [(ngModel)]="selectedValue" name="allcompanyid" (change)="onChangeCompany()">
                 <mat-option *ngFor="let allcompanyid of companyIds" [value]="allcompanyid">{{allcompanyid}}</mat-option>
               </mat-select>
             </mat-form-field>
@@ -34,12 +34,12 @@
       <div class="float-end text-end">
         <form>
           <mat-form-field>
-            <mat-label>Favorite food</mat-label>
+            <mat-label>Branch</mat-label>
             <mat-select [(ngModel)]="selectedValue" name="food">
               <mat-option *ngFor="let food of foods" [value]="food.value">{{food.viewValue}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <p> Selected food: {{selectedValue}} </p>
+          <p> Selected Branch: {{selectedValue}} </p>
         </form>
     </div>
     </div>
