--- a/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.scss
+++ b/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.scss
@@ -168,3 +168,10 @@ table {
   overflow: auto;
   top: 0;
 }
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Ensure the loader container occupies the full height of the tab */
+}
